# unified_cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIX_PLAN.md  MANIFEST.in  PHASE0_VERIFICATION.md  README.ko.md  README.md  RELEASING.md  USAGE.ko.md  USAGE.md  UX_TEST_REPORT.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-ext.yml  publish.yml
docs/: extensions.ko.md  extensions.md
docs/development/: ext-accountless-live-lab-2026-07-23.md  grok-0.2.111-smoke.md  opencode-go-live-smoke-2026-07-24.md  platform-next-stage0-baseline.md  platform-next-stage1-audit.md  platform-next-stage2-audit.md  platform-next-stage3-audit.md  platform-next-stage4-audit.md  platform-next-stage5-foundation-audit.md  platform-next-stage5b-audit.md  platform-next-stage5c-audit.md  platform-next-stage5d-audit.md  platform-next-stage5e-audit.md  platform-next-stage5f-audit.md  platform-next-stage6a-audit.md  platform-next-stage6b-readiness.md  platform-next-stage6c-accountless-provider-lab.md  provider-plugin-abi-v1.md  unified-ext-lab.md
examples/: 01_hello.py  02_history.py  03_multi_provider.py  04_streaming.py  05_web_search.py  06_error_handling.py  07_openai_sdk.py  08_async.py  09_extensions.py
scripts/: check_ext_provider_support.py  check_performance.py  performance-baseline-v1.json  performance-requirements.txt  unified-ext-lab  unified-ext-lab-real-docker  unified-ext-provider-lab  verify_distribution_pair.py  verify_github_release_assets.py  verify_release_artifacts.py  verify_single_distribution.py  verify_unified_release_artifacts.py
src/unified_cli/: __init__.py  base.py  cli.py  conversation.py  core.py  dashboard_tpl.py  discovery.py  errors.py  event_renderer.py  extension_config.py  factory.py  i18n.py  manage.py  models.py  onboarding.py  plugin.py  registry.py  repl.py  repl_commands.py  repl_completion.py  repl_state.py  server.py  session_manager.py  settings.py  state.py  ui.py  usage.py
src/unified_cli/providers/: __init__.py  claude.py  codex.py  gemini.py
src/unified_cli/web/: app.css  app.js  dashboard.html
tests/: conftest.py  test_attachments.py  test_audit_fixes.py  test_cli_manage.py  test_completion.py  test_connectivity.py  test_dashboard_assets.py  test_dashboard_packaging.py  test_distribution_pair.py  test_errors.py  test_ext_cli_repl.py  test_extension_config.py  test_fixes.py  test_gate.py  test_i18n.py  test_manage_api.py  test_manage_chat.py  test_models.py  test_performance_contract.py  test_phase1.py  test_phase2.py  test_phase3.py  test_plugin_abi.py  test_provider_hardening.py  test_release_artifacts.py  test_release_contract.py  test_repl_pty.py  test_repl_slash.py  test_repl_v2.py  test_server_endpoints.py  test_server_hardening.py  test_session_manager.py  test_settings.py  test_settings_v2.py  test_single_distribution.py  test_stage0_characterization.py  test_stage7_cache.py  test_stage7_retry.py  test_state.py  test_state_security.py  (+2 more)
tests/browser/: dashboard.spec.mjs  fake_server.py  package-lock.json  package.json  playwright.config.mjs
tests/fixtures/: core_provider_cli.py
tools/: __init__.py
tools/unified_ext_lab/: __init__.py  __main__.py  __main_provider__.py  __main_real__.py  cli.py  docker.py  docker_runtime.py  errors.py  evidence.py  fake_docker.py  lifecycle.py  live-accountless.Dockerfile  live_accountless_probe.py  model.py  profile.py  provider_cli.py  provider_docker.py  provider_lifecycle.py  provider_profiles.py  provider_runtime.py  real_cli.py  runner.py  state.py
tools/unified_ext_lab/image/: Dockerfile
tools/unified_ext_lab/image/rootfs/opt/unified-ext-lab/: guest.py  provider_guest.py
tools/unified_ext_lab/image/rootfs/opt/unified-ext-lab/fixtures/: fake-provider
tools/unified_ext_lab/image/rootfs/opt/unified-ext-lab/tool/: .volume-owner
tools/unified_ext_lab/image/rootfs/workspace/: README.md  project.marker
tools/unified_ext_lab/locks/: base-images.v1.json  image-context.v1.json  real-docker-profile.v1.json  synthetic-fixtures.v1.json
tools/unified_ext_lab/locks/provider-supply/: synthetic-readiness.supply.v1.json
tools/unified_ext_lab/tests/: __init__.py  fake_runner.py  provider_fake_runner.py  provider_supply_fixture.py  test_cli.py  test_docker.py  test_docker_runtime.py  test_evidence.py  test_lifecycle.py  test_model.py  test_provider_cli.py  test_provider_docker.py  test_provider_lifecycle.py  test_provider_profiles.py  test_real_cli.py  test_runner.py  test_state.py
