[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-cli"
version = "0.1.0"
description = "Unified Python wrapper around Claude Code, OpenAI Codex, and Google Gemini CLIs"
requires-python = ">=3.9"
dependencies = [
    "rich>=13",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2"]
dev = ["pytest>=7"]

[project.scripts]
unified-cli = "unified_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
