[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-cli"
description = "Drive Claude Code, OpenAI Codex, and Google Antigravity CLIs through one unified Python API and an OpenAI-compatible server — using your existing CLI subscriptions, no API keys required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Minwoo Kim", email = "kimminwoo190@gmail.com" },
]
keywords = [
    "claude",
    "claude-code",
    "codex",
    "antigravity",
    "cli",
    "wrapper",
    "llm",
    "agent",
    "openai-compatible",
    "subprocess",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13",
]
dynamic = ["version"]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2"]
dev = ["pytest>=7"]
all = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2", "pytest>=7"]

[project.urls]
Homepage = "https://github.com/MinwooKim1990/unified_cli"
Repository = "https://github.com/MinwooKim1990/unified_cli"
Issues = "https://github.com/MinwooKim1990/unified_cli/issues"
Documentation = "https://github.com/MinwooKim1990/unified_cli#readme"

[project.scripts]
unified-cli = "unified_cli.cli:main"

[tool.setuptools.dynamic]
version = { attr = "unified_cli.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["unified_cli*"]

[tool.setuptools.package-data]
unified_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
